--- a/src/index.html
+++ b/src/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <body>
-<h1>Hellow World?</h1>
+<h1>Hellow World!</h1>
 <script src="bundle.js"></script>
 
 </body>
